commit #2: change some markup

--- a/index.html
+++ b/index.html
@@ -9,23 +9,7 @@
 </head>
 <body>
     <div class="my-class" id="my-id">
-        Hello World
+       Git Version #1
     </div>
-
-    <p class="my-class">
-        paragrpah
-    </p>
-
-    <section class="my-class">
-        section
-    </section>
-    <span class="my-class">
-        span
-    </span>
-    <style>
-        body {
-            background-color: #000;
-        }
-    </style>
 </body>
 </html>
