--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="my-class" id="my-id">
-       Git Version #1
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto tempore suscipit fuga quod magnam praesentium quo ipsam culpa nam cumque vitae perspiciatis aspernatur similique, error vel minus eveniet quasi sunt.
     </div>
 </body>
 </html>
