--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <div class="my-class" id="my-id">
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto tempore suscipit fuga quod magnam praesentium quo ipsam culpa nam cumque vitae perspiciatis aspernatur similique, error vel minus eveniet quasi sunt.
     </div>
+    <img src="./download.jpeg" alt="">
 </body>
 </html>
